--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,209 @@
   margin: 0;
 }
 
+*:focus{
+  outline: none;
+}
+
 body {
   background-color: #fff;
+}
+
+/* Header */
+header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 0 auto;
+  padding: 2px;
+  width: 80%;
+  height: 80px;
+}
+
+header .logo {
+  background: url(../img/brand.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 60px;
+  height: 60px;
+  cursor: pointer;
+}
+
+header .right {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+header .menu {
+  margin-right: 12px;
+  background: url(../img/menu.png);
+  background-position: right;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 28px;
+  height: 28px;
+  cursor: pointer;
+}
+
+/* Footer */
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #333333;
+  color: #fff;
+  text-align: center;
+  font-size: 32px;
+  font-weight: 200;
+  height: 180px;
+  letter-spacing: 0px;
+}
+
+/* Section */
+section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  height: 900px;
+  background-color: #89d0ca;
+  overflow: hidden;
+}
+
+.section-white {
+  background-color: #fff;
+}
+
+.container {
+  display: flex;
+  align-items: center;
+  width: 80%;
+}
+
+.container .left {
+  width: 50%;
+  margin-right: 32px;
+}
+
+.container .right {
+  width: 50%;
+}
+
+.container .right img {
+  width: 100%;
+  position: relative;
+  top: 60px;
+}
+
+.contact-us {
+  padding: 32px 128px;
+  width: 50%;
+  height: 60%;
+  background-color: rgb(255, 255, 255);
+  border-radius: 28px;
+}
+
+.contact-us .title {
+  font-size: 58px;
+  letter-spacing: -1px;
+  font-family: 'Noto Sans', sans-serif;
+  font-weight: 800;
+}
+
+.contact-us .content {
+  display: flex;
+  border: none;
+  border-bottom: 1px solid #c0c0c0;
+}
+
+.contact-us input {
+  font-size: 22px;
+  margin: 0 0 8px 0;
+  padding: 28px 0 12px 0;
+  width: 100%;
+  border: none;
+  font-family: 'Courier New', Courier, monospace;
+  font-weight: 200;
+}
+
+.contact-us textarea {
+  font-size: 22px;
+  padding: 28px 0 12px 0;
+  width: 100%;
+  height: 140px;
+  font-family: 'Courier New', Courier, monospace;
+  font-weight: 200;
+  border: none;
+}
+
+/* Text */
+.sub-title {
+  font-family: 'Noto Sans', sans-serif;
+  letter-spacing: 2px;
+  font-size: 32px;
+  font-weight: 800;
+}
+
+.main-title {
+  font-size: 82px;
+  line-height: 72px;
+}
+
+.main-title .light {
+  font-size: 62px;
+  font-weight: 200;
+  margin-right: 8px;
+}
+
+.second-main-title {
+  font-size: 62px;
+}
+
+.main-title .weight {
+  font-family: 'Noto Sans', sans-serif;
+  font-weight: 500;
+}
+
+.description {
+  font-size: 22px;
+  letter-spacing: 2px;
+  line-height: 36px;
+}
+
+/* Button */
+.btn {
+  width: 220px;
+  background-color: #000;
+  padding: 18px;
+  color: #fff;
+  text-align: center;
+  font-size: 22px;
+  font-weight: 500;
+  letter-spacing: 4px;
+  border-radius: 32px;
+  cursor: pointer;
+}
+
+.btn-small {
+  margin: 0 8px;
+  color: #000;
+  text-align: center;
+  font-size: 18px;
+  font-weight: 800;
+  cursor: pointer;
+}
+
+/* Space */
+.super-large-space {
+  margin: 122px 0 0 0;
+}
+
+.large-space {
+  margin: 32px 0;
+}
+
+.middle-space {
+  margin: 22px 0;
 }
