--- a/css/common.css
+++ b/css/common.css
@@ -42,6 +42,7 @@
   text-align: center;
   font-size: 22px;
   font-weight: 500;
+  font-family: 'Courier New', Courier, monospace;
   letter-spacing: 1px;
   border-radius: 32px;
   cursor: pointer;
@@ -53,7 +54,32 @@
   text-align: center;
   font-size: 18px;
   font-weight: 800;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
   cursor: pointer;
+}
+
+.btn-submit {
+  margin: 0 4px;
+  padding: 8px 22px;
+  width: auto;
+  background-color: #89d0ca;
+  color: #fff;
+  border-radius: 24px;
+  text-align: center;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+.btn-submit:hover {
+  background-color: #10ecd9;
+}
+
+.btn-cancel {
+  background-color: #c0c0c0;
+}
+
+.btn-cancel:hover {
+  background-color: #075952;
 }
 
 /* Space */
