--- a/css/form.css
+++ b/css/form.css
@@ -1,7 +1,7 @@
 .normal-form {
   padding: 32px 128px;
   width: 50%;
-  background-color: rgb(255, 255, 255);
+  background-color: #fff;
   border-radius: 28px;
 }
 
