--- a/css/common.css
+++ b/css/common.css
@@ -112,6 +112,11 @@ a.general:hover {
   padding: 16px 32px;
 }
 
+.block-one .btn:hover {
+  background-color: #075952;
+  color: #fff;
+}
+
 .block-one .btn-big {
   width: auto;
   height: auto;
@@ -125,9 +130,13 @@ a.general:hover {
   width: 220px;
   height: auto;
   font-size: 16px;
-  background-color: #000;
+  background-color: #075952;
   color: #fff;
   border-radius: 32px;
+}
+
+.block-one .btn-small:hover {
+  background-color: #000;
 }
 
 .block-one .btn-small-red {
@@ -135,14 +144,27 @@ a.general:hover {
   width: 220px;
   height: auto;
   font-size: 16px;
-  background-color: #c0c0c0;
+  background-color: #f00;
   color: #fff;
   border-radius: 32px;
 }
 
-.block-one .btn:hover {
-  background-color: #075952;
+.block-one .btn-small-red:hover {
+  background-color: #000;
+}
+
+.block-one .btn-small-blue {
+  padding: 8px 22px;
+  width: 220px;
+  height: auto;
+  font-size: 16px;
+  background-color: #296ee1;
   color: #fff;
+  border-radius: 32px;
+}
+
+.block-one .btn-small-blue:hover {
+  background-color: #000;
 }
 
 .block-content {
@@ -150,6 +172,40 @@ a.general:hover {
   border-radius: 32px;
   background-color: #fff;
   padding: 32px;
+}
+
+.block-content .label {
+  width: 100%;
+  margin: 8px 0 12px 0;
+  padding: 8px 0 4px 0;
+  color: #075952;
+  font-size: 22px;
+}
+
+.block-content .group {
+  margin: 12px 0;
+}
+
+.block-content input {
+  width: 100%;
+  padding: 12px 0;
+  border: none;
+  border-bottom: 1px dashed #000;
+  font-size: 18px;
+}
+
+.block-content textarea {
+  width: 100%;
+  height: 120px;
+  padding: 12px 0;
+  border: none;
+  border-bottom: 1px dashed #000;
+  font-size: 18px;
+}
+
+.block-content .action {
+  display: flex;
+  justify-content: end;
 }
 
 .block-top {
@@ -160,19 +216,24 @@ a.general:hover {
   align-items: center;
 }
 
+.block-top .tab:hover {
+  background-color: #075952;
+}
+
 .block-label {
   margin: 0 4px 0 0;
   padding: 8px 24px;
-  border-top-left-radius: 12px;
-  border-top-right-radius: 12px;
-  background-color: #075952;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+  background-color: #000;
   color: #fff;
   text-align: center;
   cursor: pointer;
 }
 
-.block-label:hover {
-  background-color: #000;
+.block-active-label {
+  background-color: #075952;
+  cursor: auto;
 }
 
 .block-item {
