--- a/css/modal.css
+++ b/css/modal.css
@@ -47,10 +47,38 @@
 
 .modal-content {
   margin: 24px 48px;
-  line-height: 26px;
   font-size: 22px;
   font-family: 'Courier New', Courier, monospace;
   letter-spacing: -1px;
+}
+
+.modal-content .label {
+  width: 100%;
+  margin: 8px 0 12px 0;
+  padding: 8px 0 4px 0;
+  color: #075952;
+  font-size: 22px;
+}
+
+.modal-content .group {
+  margin: 12px 0;
+}
+
+.modal-content input {
+  width: 100%;
+  padding: 12px 0;
+  border: none;
+  border-bottom: 1px dashed #000;
+  font-size: 18px;
+}
+
+.modal-content textarea {
+  width: 100%;
+  height: 120px;
+  padding: 12px 0;
+  border: none;
+  border-bottom: 1px dashed #000;
+  font-size: 18px;
 }
 
 .modal-action {
