--- a/css/index.css
+++ b/css/index.css
@@ -1,8 +1,23 @@
-* {
-  padding: 0;
-  margin: 0;
+.login-block {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--gray-color);
+  border-radius: 8px;
+  padding: 32px;
 }
-
-body {
-  background-color: #fff;
+.login-block__title {
+  font-size: 24px;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+.login-block__body {
+  width: 100%;
+  margin: 16px 0;
+}
+.login-block .button {
+  width: 148px;
+}/*# sourceMappingURL=index.css.map */
