--- a/css/signin.css
+++ b/css/signin.css
@@ -1,3 +1,10 @@
+.login-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
 .login-block {
   display: flex;
   flex-direction: column;
@@ -6,6 +13,16 @@
   background-color: var(--gray-color);
   border-radius: 8px;
   padding: 32px;
+  width: 480px;
+}
+.login-block__logo {
+  margin-bottom: 16px;
+  border-radius: 50%;
+  background-color: var(--third-color);
+  padding: 8px;
+}
+.login-block__logo img {
+  width: 90px;
 }
 .login-block__title {
   font-size: 24px;
@@ -13,6 +30,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  color: var(--primary-color);
 }
 .login-block__body {
   width: 100%;
@@ -20,4 +38,4 @@
 }
 .login-block .button {
   width: 148px;
-}/*# sourceMappingURL=index.css.map */
+}/*# sourceMappingURL=signin.css.map */
