--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -10,7 +10,7 @@
   --white-color: #fff;
   --gray-color: #f8f9fa;
   --black-color: #000;
-  --title-font: "Oswald";
+  --title-font: "Pacifico";
   --regular-font: "Arial";
 }
 
