--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -42,6 +42,7 @@ body {
   align-items: center;
   position: fixed;
   width: 100%;
+  z-index: 999;
 }
 
 .layout__content {
@@ -76,7 +77,50 @@ body {
 }
 
 // Overwrite the default style of the button
+label {
+  margin: 0 !important;
+}
+
+td {
+  padding: 0 !important;
+  vertical-align: middle !important;
+}
+
 .form-control:focus {
   border: 1px solid var(--primary-color);
   box-shadow: none;
+}
+
+.table {
+  margin: 0;
+}
+
+.form-control {
+  border: 1px solid var(--primary-color);
+}
+
+.modal {
+  // @media (min-width: 576px) {
+  //   .modal-dialog {
+  //     max-width: 80% !important;
+  //   }
+  // }
+
+  // @media (min-width: 768px) {
+  //   .modal-dialog {
+  //     max-width: 60% !important;
+  //   }
+  // }
+
+  // @media (min-width: 992px) {
+  //   .modal-dialog {
+  //     max-width: 60% !important;
+  //   }
+  // }
+
+  // @media (min-width: 1200px) {
+  //   .modal-dialog {
+  //     max-width: 60% !important;
+  //   }
+  // }
 }
