--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,11 @@ body {
   margin: 0;
   padding: 0;
 }
+
+input {
+  font-size: 1rem;
+  padding: 0.5rem;
+  margin: 0.5rem;
+  border: 1px solid #282c34;
+  border-radius: 4px;
+}
