--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,13 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  padding: 0;
+  margin: 0;
+  font-family: "Roboto", sans-serif;
+  font-size: 62.5%;
+}
+
 .layout {
   display: grid;
   grid-template-rows: auto auto 1fr auto;
